--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.7",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "firebase": "^10.13.2",
@@ -21,6 +22,8 @@
     "moment": "^2.30.1",
     "npm": "^10.8.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.1.0",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
