--- a/server/vercel.json
+++ b/server/vercel.json
@@ -11,6 +11,9 @@
         "src": "/api/(.*)",
         "dest": "server.js"
       }
-    ]
+    ],
+    "env":{
+        "PORT":"8080"
+    }
   }
   
