--- a/server/vercel.json
+++ b/server/vercel.json
@@ -8,7 +8,7 @@
     ],
     "routes": [
       {
-        "src": "/api/astra-hrms-api",
+        "src": "/(.*)",
         "dest": "server.js"
       }
     ],
