--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,4 @@
-MONGODB_URI="mongodb://localhost:27017/Mern_app"
-PORT="8080"
+MONGODB_URI="mongodb+srv://Abishek:Y6AMccKN2FeJNUkd@abishek.tdlqo.mongodb.net/MAX?retryWrites=true&w=majority&appName=ABISHEK"
 
-NODE_ENV="development"
+NODE_ENV="production"
 JWT_SECRET="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
