--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,5 @@
 MONGODB_URI="mongodb+srv://Abishek:Y6AMccKN2FeJNUkd@abishek.tdlqo.mongodb.net/MAX?retryWrites=true&w=majority&appName=ABISHEK"
 
+PORT="8080"
 NODE_ENV="production"
 JWT_SECRET="eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9"
